# optoctreeparser

./: .gitattributes  CMakeLists.txt  Doxyfile  LICENSE  README.md
docs/html/: README_8md.html  annotated.html  annotated_dup.js  base__struct_8hpp.html  base__struct_8hpp.js  base__struct_8hpp__dep__incl.map  base__struct_8hpp__dep__incl.md5  base__struct_8hpp__incl.map  base__struct_8hpp__incl.md5  base__struct_8hpp_source.html  classes.html  classoptoctreeparser_1_1Differ-members.html  classoptoctreeparser_1_1Differ.html  classoptoctreeparser_1_1Parser-members.html  classoptoctreeparser_1_1Parser.html  classoptoctreeparser_1_1Reader-members.html  classoptoctreeparser_1_1Reader.html  classoptoctreeparser_1_1Writer-members.html  classoptoctreeparser_1_1Writer.html  differ_8hpp.html  differ_8hpp.js  differ_8hpp__incl.map  differ_8hpp__incl.md5  differ_8hpp_source.html  dir_000001_000000.html  dir_000003_000000.html  dir_000004_000000.html  dir_000005_000000.html  dir_3641795f5ac83aac21456e1fce038978.html  dir_3641795f5ac83aac21456e1fce038978.js  dir_3641795f5ac83aac21456e1fce038978_dep.map  dir_3641795f5ac83aac21456e1fce038978_dep.md5  dir_9aa6a43d291e92f93de1068761ed9b02.html  dir_9aa6a43d291e92f93de1068761ed9b02.js  dir_9aa6a43d291e92f93de1068761ed9b02_dep.map  dir_9aa6a43d291e92f93de1068761ed9b02_dep.md5  dir_d3e03ffc02fed53d32bf903a9bb2267d.html  dir_d3e03ffc02fed53d32bf903a9bb2267d.js  dir_d3e03ffc02fed53d32bf903a9bb2267d_dep.map  dir_d3e03ffc02fed53d32bf903a9bb2267d_dep.md5  (+61 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_4.js  variables_7.js
include/base_struct/: base_struct.hpp
include/differ/: differ.hpp
include/parser/: parser.hpp
include/reader/: reader.hpp
include/writer/: writer.hpp
src/differ/: differ.cpp
src/parser/: parser.cpp
src/reader/: reader.cpp
src/writer/: writer.cpp
tests/: CMakeLists.txt  main.cpp
tests/unit/: test_differ.cpp  test_parser.cpp  test_reader.cpp  test_writer.cpp
tests/unit/resources/: parse_optoctreepatch.optoctreepatch  read_real_optoctree.optoctree
